# kalc

./: .gitignore  Cargo.toml  LICENSE  Makefile  OVMF_VARS.fd  README.md  TODO.md  rust-toolchain.toml
boot/: Makefile  boot.c  boot_loader.asm  compile_commands.json  main.c  startup.nsh
boot/src/: file.c  file.h  font.c  font.h  graphics.c  main.c  output.c  output.h  utils.c  utils.h
boot/src/includes/: boot.h  file.h  font.h  graphics.h  utils.h
exec/: Cargo.toml
exec/src/: main.rs
kernel/: Cargo.toml  Makefile  compile_commands.json
kernel-rs/src/: main.rs
kernel/src/: boot.h  graphics.c  graphics.h  interrupt.rs  kernel.c  klogger.rs  ktypes.h  main.rs  output.c  output.h  output.rs
src/: main.rs
