cargo-features = ["per-package-target"]

[package]
name = "kalcos"
version = "0.1.0"
forced-target = "x86_64-unknown-none"

[workspace]
members = ["exec"]

[dependencies]
bootloader-x86_64-common = { git = "https://github.com/rust-osdev/bootloader", version = "0.11.0" }
bootloader_api = { git = "https://github.com/rust-osdev/bootloader", version = "0.11.0" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256
