cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
forced-target = "x86_64-unknown-none"

[dependencies]
bootloader_api = "0.11"
bootloader-x86_64-common = "0.11"
conquer-once = { version = "0.3.2", default-features = false }
log = { version = "0.4.17", default-features = false }
spin = "0.9.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
